package makowins;

public enum ETiposPrenda {
	SACO, PANTALON, CAMISA
}
