package makowins.strat_estados;

public interface IEstadoPrendaStrategy {

	double getValorPrenda(double basePrice);

}
